# UPF_projects

./: LICENSE  README.md
Computer Graphics/: Readme.txt
Data Mining/P1_2_u186665_241456/: ps01_02_data_preparation.ipynb
Data Structures and Algorithms/iSpell-skeleton/: CMakeLists.txt
Data Structures and Algorithms/iSpell-skeleton/data/: spell_this_1.txt  word_list_en_1.txt  word_list_test_1.txt  word_list_test_2.txt
Data Structures and Algorithms/iSpell-skeleton/include/: generate_candidates.h  hash_table.h  linked_list.h  utils.h
Data Structures and Algorithms/iSpell-skeleton/src/: generate_candidates.c  hash_table.c  linked_list.c  main.c  utils.c
Data Structures and Algorithms/lab2_BST_students/: CMakeLists.txt
Data Structures and Algorithms/lab2_BST_students/data/: data_dict.tsv  data_list.tsv  spell_this_1.txt  test_shuffled_dictionary_1.txt  test_shuffled_dictionary_2.txt  test_shuffled_dictionary_3.txt  word_list_3.txt  word_list_en_1.txt  word_list_en_2.txt  word_list_test_3.txt
Data Structures and Algorithms/lab2_BST_students/include/: commons.h  generate_candidates.h  main.h  tree.h  utils.h
Data Structures and Algorithms/lab2_BST_students/src/: generate_candidates.c  main.c  tree.c  utils.c
Intro. To Python/: Connect4.ipynb  GP302_P3_U186665_U186668.ipynb
Intro. to Data Science/: ps07_hubs_authorities.ipynb
Large Scale Distributed Systems/: Data.txt
Networks I/: final_project_students.pkt
P8/: ps08_components_k_cores.ipynb
Probabilistic Graphical Model/: P3_U186661_U186665.ipynb  P4_U186661_U186665.ipynb  U186665_U186661.ipynb
(+245 files in other folders)
